--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "start": "node index.ts",
-    "dev": "ts-node-dev --respawn --transpile-only server.ts"
+   "dev": "tsx index.ts",
+  "build": "tsc",
+  "start": "node dist/index.js"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/node": "^24.10.1",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3"
   },
   "peerDependencies": {
     "typescript": "^5.9.3"
@@ -17,6 +22,7 @@
     "@types/express": "^5.0.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "mongoose": "^9.0.0",
     "ts-node-dev": "^2.0.0"
   }
 }
