--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,15 @@
 {
   "compilerOptions": {
-    // Environment setup & latest features
-    "lib": ["ESNext"],
-    "target": "ESNext",
-    "module": "Preserve",
-    "moduleDetection": "force",
-    "jsx": "react-jsx",
-    "allowJs": true,
-
-    // Bundler mode
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "verbatimModuleSyntax": true,
-    "noEmit": true,
-
-    // Best practices
-    "strict": true,
-    "skipLibCheck": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedIndexedAccess": true,
-    "noImplicitOverride": true,
-
-    // Some stricter flags (disabled by default)
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noPropertyAccessFromIndexSignature": false
+    "target": "ES2020",             // Modern JS features allowed
+    "module": "ESNext",             // ES modules
+    "moduleResolution": "Node",     // Node-style resolution
+    "esModuleInterop": true,        // Allows default import from CommonJS
+    "strict": true,                 // Type safety
+    "outDir": "dist",               // Compiled JS goes here
+    "resolveJsonModule": true,      // Allows import of JSON files
+    "skipLibCheck": true            // Speeds up compilation by skipping type checks in node_modules
+  },
+  "ts-node": {
+    "esm": true                      // ts-node runs ES modules directly
   }
 }
